--- a/CCharp.Net Intermedio Tarea 1- Ejercicio 1/Views/Home/Index.cshtml
+++ b/CCharp.Net Intermedio Tarea 1- Ejercicio 1/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Signo Zodiacal</h1>
+    <p> <a asp-controller="ZodiacSign" asp-action="GetZodiacSign">Consultar Signo Zodiacal</a>.</p>
 </div>
