--- a/CCharp.Net Intermedio Tarea 1- Ejercicio 1/Views/Home/Index.cshtml
+++ b/CCharp.Net Intermedio Tarea 1- Ejercicio 1/Views/Home/Index.cshtml
@@ -2,7 +2,9 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Signo Zodiacal</h1>
-    <p> <a asp-controller="ZodiacSign" asp-action="GetZodiacSign">Consultar Signo Zodiacal</a>.</p>
-</div>
+    <div class="text-center">
+        <h1 class="display-4">Tarea 1</h1>
+        <p> <a asp-controller="ZodiacSign" asp-action="GetZodiacSign">Consultar Signo Zodiacal</a>.</p>
+        <p> <a asp-controller="ZodiacSign" asp-action="GetZodiacSign">Consultar Solución Ecuación Cuadratica</a>.</p>
+        <p> <a asp-controller="MultiplyTables" asp-action="GetMultiplyTable">Consultar Tablas de Multiplicar (Del 1 Al 12)</a>.</p>
+    </div>
