--- a/CCharp.Net Intermedio Tarea 1- Ejercicio 1/Views/ZodiacSign/Details.cshtml
+++ b/CCharp.Net Intermedio Tarea 1- Ejercicio 1/Views/ZodiacSign/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ZodiacSign
 @{
 
-    ViewBag.Title = "Resultado Consulta";
+    ViewBag.Title = "Resultado Consulta Signo Zodiacal";
 
 }
 <h2>Resultado consulta Signo Zodiacal</h2>
