--- a/CCharp.Net Intermedio Tarea 1- Ejercicio 1/Views/ZodiacSign/GetZodiacSign.cshtml
+++ b/CCharp.Net Intermedio Tarea 1- Ejercicio 1/Views/ZodiacSign/GetZodiacSign.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ZodiacSign
 @{
 
-    ViewBag.Title = "Formulario Consulta";
+    ViewBag.Title = "Formulario Consulta Signo Zodiacal";
 
 }
 Formulario para consulta de Signo Zodiacal
