Added some exercise 2 UI improvement and exercise 3 finish

--- a/CCharp.Net Intermedio Tarea 1- Ejercicio 1/Views/ZodiacSign/GetZodiacSign.cshtml
+++ b/CCharp.Net Intermedio Tarea 1- Ejercicio 1/Views/ZodiacSign/GetZodiacSign.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Formulario Consulta Signo Zodiacal";
 
 }
-Formulario para consulta de Signo Zodiacal
+    <h3>Formulario para consulta de Signo Zodiacal</h3>
 <form enctype="multipart/form-data" asp-controller="ZodiacSign" asp-action="Create" method="post" class="mt-3">
     <div class="form-group row">
         <label asp-for="Day" class="col-sm-2 col-form-label"></label>
